--- a/projekti.css
+++ b/projekti.css
@@ -1,5 +1,3 @@
-/* Navbar styles */
-
 *{
   margin:0;
   padding:0;
@@ -13,7 +11,7 @@
   margin: 0;
   text-align: center;
   display: flex;
-  flex-wrap: wrap; /* Allow items to wrap to the next line on smaller screens */
+  flex-wrap: wrap; 
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 0 10px rgba(10, 9, 9, 0.897);
@@ -29,7 +27,7 @@ body{
 .button {
   cursor: pointer;
   padding: 10px 20px;
-  margin: 5px; /* Adjust spacing between buttons */
+  margin: 5px; 
   text-decoration: none;
   color: #fff;
   background-color: #4e4e4e;
@@ -45,14 +43,14 @@ body{
   background-color: rgb(58, 58, 58);
 }
 
-/* Logo styles */
+
 .logo {
-  width: 100%; /* Make the logo responsive to its container */
-  max-width: 200px; /* Set a maximum width to prevent it from growing too large */
-  height: auto; /* Maintain the aspect ratio */
+  width: 100%; 
+  max-width: 200px; 
+  height: auto; 
 }
 
-/* Footer styles */
+
 footer {
   margin-top: auto;
   display: flex;
@@ -94,7 +92,7 @@ footer {
 .mySlides {
   display: none;
   width: 100%;
-  transition: opacity 1s ease-in-out; /* Adjust the transition duration as needed */
+  transition: opacity 1s ease-in-out;
 }
 
 img {
