--- a/projekti.css
+++ b/projekti.css
@@ -1,6 +1,6 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -11,14 +11,14 @@
   margin: 0;
   text-align: center;
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 0 10px rgba(10, 9, 9, 0.897);
   position: fixed;
   z-index: 999;
 }
-body{
+body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,12 +27,12 @@ body{
 .button {
   cursor: pointer;
   padding: 10px 20px;
-  margin: 5px; 
+  margin: 5px;
   text-decoration: none;
   color: #fff;
   background-color: #4e4e4e;
   border-radius: 5px;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   transition: background-color 0.3s ease;
   display: flex;
@@ -43,13 +43,11 @@ body{
   background-color: rgb(58, 58, 58);
 }
 
-
 .logo {
-  width: 100%; 
-  max-width: 200px; 
-  height: auto; 
+  width: 100%;
+  max-width: 200px;
+  height: auto;
 }
-
 
 footer {
   margin-top: auto;
@@ -61,7 +59,6 @@ footer {
   bottom: 0;
   width: 100%;
   box-shadow: 0 0 10px rgba(10, 9, 9, 0.897);
-
 }
 
 .info {
@@ -69,7 +66,6 @@ footer {
   flex-wrap: wrap;
   justify-content: space-around;
 }
-
 
 .check-in,
 .numri,
@@ -79,14 +75,10 @@ footer {
   height: 20px;
 }
 
-
-
 .slideshow-container {
   max-width: 50%;
   position: relative;
   margin: auto 0;
-  
-
 }
 
 .mySlides {
@@ -99,7 +91,3 @@ img {
   width: 100%;
   height: auto;
 }
-
-  
-
-
