--- a/projekti.css
+++ b/projekti.css
@@ -79,15 +79,24 @@ footer {
   max-width: 50%;
   position: relative;
   margin: auto 0;
+  padding: 5%; 
 }
 
 .mySlides {
   display: none;
   width: 100%;
   transition: opacity 1s ease-in-out;
+  border: #4e4e4e;
+  border-radius: 10%;
+  border-style: solid;
+  overflow: hidden;
 }
 
 img {
+  display: block;
   width: 100%;
   height: auto;
+  margin: 0;
+  padding: 0;
 }
+
