--- a/projekti.css
+++ b/projekti.css
@@ -28,7 +28,7 @@
 
 }
 .home-content{
-  background-image: url(pictures\ used/Image2.png);
+  background-image: url(pictures\ used/Image2.jpg);
   overflow-y: auto;
   flex-grow: 1;
   width: 100%;
@@ -80,6 +80,12 @@
 }
 .text2{
   margin-bottom: 10%;
+}
+
+.content2 .imageBelow img{
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
 }
 
 .button {
