--- a/3Dplan.css
+++ b/3Dplan.css
@@ -73,6 +73,36 @@
         transform: scale(1.01);
       }
 
+
+      .image-description {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+      
+      .image-description img {
+        width: 70%;
+        height: auto;
+        max-width: 100%;
+        transition: transform 0.3s;
+        cursor: pointer;
+      }
+      
+      .image-description p {
+        width: 100%;
+        height: auto;
+        color: #FFFFFF;
+        font-weight: 500;
+        font-family: 'Poppins', sans-serif;
+        font-size: 25px;
+        padding: 10px;
+
+      }
+
       .modal {
         display: none;
         position: fixed;
