--- a/3Dplan.css
+++ b/3Dplan.css
@@ -90,10 +90,12 @@
         max-width: 100%;
         transition: transform 0.3s;
         cursor: pointer;
+        border-radius: 5%;
+        margin-right: 20px;
       }
       
       .image-description p {
-        width: 100%;
+        width: 600px;
         height: auto;
         color: #FFFFFF;
         font-weight: 500;
@@ -121,8 +123,10 @@
         margin: auto;
         display: block;
         width: 80%;
-        max-width: 700px;
-        max-height: 80%;
+        max-width: 80vw;
+        max-height: 80vh;
+        margin:auto;
+        width: auto;
       }
   
       .close {
