--- a/3Dplan.css
+++ b/3Dplan.css
@@ -5,6 +5,7 @@
   }
   
   .navbar {
+    backdrop-filter: blur(8px);
     background-color: transparent;
     width: 100%;
     padding: 10px;
@@ -51,59 +52,44 @@
         font-family: 'Poppins', sans-serif;
         
       }
-      .image-container{
-        display: flex;
-        position: relative;
-        margin: 10px;
-        overflow: hidden;
-        width: 30%;
-        box-sizing: border-box;
-        justify-content: space-between;
-      }
-
-      .image {
-        width: 100%;
-        height: auto;
-        max-width: 100%;
-        transition: transfrom 0.3s;
-        cursor: pointer;
-      }
-
-      .image:hover {
-        transform: scale(1.01);
-      }
-
-
-      .image-description {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin: 10px;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-      }
-      
-      .image-description img {
-        width: 70%;
-        height: auto;
-        max-width: 100%;
-        transition: transform 0.3s;
-        cursor: pointer;
-        border-radius: 5%;
-        margin-right: 20px;
-      }
-      
-      .image-description p {
-        width: 600px;
-        height: auto;
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .image-description {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px; 
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: calc(30% - 20px); 
+  }
+  
+  .image-description img {
+    width: 70%;
+    height: auto;
+    max-width: 100%;
+    transition:  0.3s;
+    cursor: pointer;
+    border-radius: 5%;
+    margin-right: 20px; 
+  }
+  
+  .image-description p {
+    flex: 1;
+    font-size: 14px;
+    margin: 0;
+  
         color: #FFFFFF;
         font-weight: 500;
         font-family: 'Poppins', sans-serif;
         font-size: 25px;
-        padding: 10px;
+        
 
-      }
+  }
 
       .modal {
         display: none;
