--- a/2Dplan.css
+++ b/2Dplan.css
@@ -53,7 +53,7 @@
         
       }
       .pictures{
-        width: 90%;
+        width: 100%;
         display: flex;
         justify-content: space-evenly;
         flex-wrap: wrap;
@@ -75,14 +75,52 @@
         width: 100%;
         height: auto;
         max-width: 100%;
-        transition: transfrom 0.3s;
+        transition: 0.3s;
         cursor: pointer;
       }
 
-      .image:hover {
-        transform: scale(1.1);
-      }
 
+        
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 9999;
+        padding-top: 50px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0,0.9);
+      }
+  
+      .modal-content {
+        margin: auto;
+        display: block;
+        width: 80%;
+        max-width: 80vw;
+        max-height: 80vh;
+        margin:auto;
+        width: auto;
+      }
+  
+      .close {
+        color: white;
+        position: absolute;
+        top: 15px;
+        right: 35px;
+        font-size: 40px;
+        font-weight: bold;
+        transition: 0.3s;
+      }
+  
+      .close:hover,
+      .close:focus {
+        color: #bbb;
+        text-decoration: none;
+        cursor: pointer;
+      }
 
 
 
