--- a/projekti.css
+++ b/projekti.css
@@ -23,9 +23,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: rgb(209, 202, 187);
- 
-  
+  background-color: rgb(209, 202, 187); 
 
 }
 .home-content{
@@ -35,7 +33,6 @@
   width: 100%;
   height: fit-content;
   box-sizing: border-box;
-  padding: 20px;
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -64,24 +61,38 @@
   opacity: 1;
   display: none;
   align-self: center;
+  margin-bottom: 5%;
 }
+
 .content2{
   font-size: 2rem;
   font-weight: 600;
   line-height: 1.5;
-  margin-top: 20px;
+  margin-top: 10px;
   font-family: 'Poppins', sans-serif;
   color: #FFFFFF;
   justify-content: center;
   align-items: center;
-  padding: 20%;
+  padding: 10% 20%;
 }
-.title2{
-  padding-bottom: 20%;
+.content3 {
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+  color: #FFFFFF;
+  justify-content: center;
+  align-items: center;
+  padding: 10% 20%;
 }
-.text2{
-  margin-bottom: 10%;
+.content3 .imageBelow img{
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
 }
+
+
 
 .content2 .imageBelow img{
   width: 100%;
