--- a/2Dplan.css
+++ b/2Dplan.css
@@ -69,6 +69,7 @@
         max-height: min-content;
         box-sizing: border-box;
         justify-content: space-between;
+        border-radius: 5%;
       }
 
       .image {
@@ -79,8 +80,6 @@
         cursor: pointer;
       }
 
-
-        
       .modal {
         display: none;
         position: fixed;
