--- a/2Dplan.css
+++ b/2Dplan.css
@@ -69,12 +69,12 @@
         max-height: min-content;
         box-sizing: border-box;
         justify-content: space-between;
-        border-radius: 5%;
+        border-radius: 10%;
       }
 
       .image {
         width: 100%;
-        height: auto;
+        height: 450px;
         max-width: 100%;
         transition: 0.3s;
         cursor: pointer;
