--- a/3Dplan.css
+++ b/3Dplan.css
@@ -56,6 +56,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    flex-wrap: nowrap;
   }
   
   .image-description {
@@ -66,6 +67,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     width: calc(30% - 20px); 
+    flex-wrap: nowrap;
   }
   
   .image-description img {
@@ -82,7 +84,7 @@
     flex: 1;
     font-size: 14px;
     margin: 0;
-  
+    flex-wrap: nowrap;
         color: #FFFFFF;
         font-weight: 500;
         font-family: 'Poppins', sans-serif;
