--- a/3Dplan.css
+++ b/3Dplan.css
@@ -21,8 +21,8 @@
   }
    body {
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     background-color: rgb(209, 202, 187);
     }
 
@@ -52,10 +52,18 @@
         font-family: 'Poppins', sans-serif;
         
       }
+
+.image-grid {
+  display: flex;
+  justify-content: space-between;
+}
+      
+
+
 .image-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    /* display: flex; */
+    /* flex-wrap: wrap;
+    justify-content: space-between; */
   }
   
   .image-description {
@@ -87,7 +95,38 @@
         font-weight: 500;
         font-family: 'Poppins', sans-serif;
         font-size: 25px;
+  }
+
+        .additional-images {
+          display: flex;
+          align-items: center;
+          margin-bottom: 20px; 
+          padding: 10px;
+          border: 1px solid #ccc;
+          border-radius: 5px;
+          width: calc(30% - 20px); 
+        }
         
+        .additional-images img {
+          width: 70%;
+          height: auto;
+          max-width: 100%;
+          transition:  0.3s;
+          cursor: pointer;
+          border-radius: 5%;
+          margin-right: 20px; 
+        }
+        
+        .additional-images  p {
+          flex: 1;
+          font-size: 14px;
+          margin: 0;
+        
+              color: #FFFFFF;
+              font-weight: 500;
+              font-family: 'Poppins', sans-serif;
+              font-size: 25px;
+              
 
   }
 
