--- a/3Dplan.css
+++ b/3Dplan.css
@@ -21,8 +21,8 @@
   }
    body {
     min-height: 100vh;
-    /* display: flex; */
-    /* flex-direction: column; */
+    display: flex;
+    flex-direction: column;
     background-color: rgb(209, 202, 187);
     }
 
@@ -52,24 +52,12 @@
         font-family: 'Poppins', sans-serif;
         
       }
-
-
-      .image-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        width: 100%;
-      }
-
-    
-
 .image-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     flex-wrap: nowrap;
   }
-
   
   .image-description {
     display: flex;
@@ -81,99 +69,29 @@
     width: calc(30% - 20px); 
     flex-wrap: nowrap;
   }
-
   
   .image-description img {
-    margin: 10%;
-    width: 100%;
+    width: 70%;
     height: auto;
     max-width: 100%;
-    transition: 0.3s;
+    transition:  0.3s;
     cursor: pointer;
     border-radius: 5%;
-    margin-bottom: 10px;
+    margin-right: 20px; 
   }
   
   .image-description p {
     flex: 1;
-    padding: 2%;
-    background-color: white;
-    border-radius: 5px;
-    font-size: 18px;
+    font-size: 14px;
     margin: 0;
     flex-wrap: nowrap;
         color: #FFFFFF;
         font-weight: 500;
         font-family: 'Poppins', sans-serif;
         font-size: 25px;
-  }
-
-        .additional-images {
-          display: flex;
-          align-items: center;
-          margin-bottom: 20px; 
-          padding: 10px;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-          width: calc(30% - 20px); 
-        }
         
-        .additional-images img {
-          width: 70%;
-          height: auto;
-          max-width: 100%;
-          transition:  0.3s;
-          cursor: pointer;
-          border-radius: 5%;
-          margin-right: 20px; 
-        }
-        
-        .additional-images  p {
-          flex: 1;
-          font-size: 14px;
-          margin: 0;
-        
-              color: #FFFFFF;
-              font-weight: 500;
-              font-family: 'Poppins', sans-serif;
-              font-size: 25px;
-              
 
   }
-
-  .additional-images{
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px; 
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: calc(30% - 20px); 
-  }
-  .additional-images img {
-    margin: 10%;
-    width: 100%;
-    height: auto;
-    max-width: 100%;
-    transition: 0.3s;
-    cursor: pointer;
-    border-radius: 5%;
-    margin-bottom: 10px;
-  }
-  
-  .additional-images p {
-    flex: 1;
-    padding: 2%;
-    background-color: white;
-    border-radius: 5px;
-    font-size: 18px;
-    margin: 0;
-    color: rgb(209, 202, 187);
-    font-weight: 500;
-    font-family: 'Poppins', sans-serif;
-      
-  }
-
 
       .modal {
         display: none;
