--- a/3Dplan.css
+++ b/3Dplan.css
@@ -71,24 +71,23 @@
   }
   
   .image-description img {
-    width: 70%;
+    width: 90%;
     height: auto;
     max-width: 100%;
     transition:  0.3s;
     cursor: pointer;
     border-radius: 5%;
-    margin-right: 20px; 
   }
   
   .image-description p {
     flex: 1;
     font-size: 14px;
-    margin: 0;
     flex-wrap: nowrap;
-        color: #FFFFFF;
-        font-weight: 500;
-        font-family: 'Poppins', sans-serif;
-        font-size: 25px;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    margin: 200px;
         
 
   }
